# earth-one

./: .gitignore  Manifest.toml  Project.toml  README.md  build.sbt  requirements.txt  template.config
app-rs/: Cargo.toml
app/controllers/: HomeController.scala
app/views/: about.scala.html  main.scala.html  rainfall.scala.html  stations.scala.html
bokeh/: data_explorer.py
conf/: routes
crawler/: build.sbt  gdanskiewody.jl  gdanskiewody.py
crawler-hs/: ChangeLog.md  README.md  crawler-hs.cabal  package.yaml
crawler-hs/app/: Main.hs
crawler-rs/: Cargo.toml
crawler-rs/src/: main.rs
crawler/src/main/scala/earthone/crawler/: Main.scala
data-sources/: gdanskiewody.ipynb
notebook/: Bokeh sandbox.ipynb  Gdanskie Wody.ipynb
script/: data-explorer.jl  data_explorer.jl  findmissing.jl  gdanskiewody.jl  gdanskiewody.py  rainfall_explorer.jl  sandbox.jl  scanner.jl  water_explorer.jl
src/main/scala/earth1/: FindMissingReadings.scala  Main.scala
src/main/scala/earth1/crawler/: GdanskieWody.scala
validate-rs/: Cargo.toml
webserver/app/controllers/: HomeController.scala
webserver/app/views/: index.scala.html
