[package]
name = "crawler-rs"
version = "0.1.0"
authors = ["klangner <klangner@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust-ini = "0.15"
reqwest = { version = "0.10", features = ["json", "blocking"] }
csv = "1.1"
chrono = "0.4"
timeseries = { path = "../../../rust/timeseries.rs" }

